# developers-hub

./: README.md
authentication_examples/: README.md
authentication_examples/cs/: Program.cs  README.md  cs.csproj
authentication_examples/go/: go.mod  go.sum  test.go
authentication_examples/java/my-java-project/: pom.xml
authentication_examples/java/my-java-project/src/main/java/com/example/: FireblocksSDKExample.java
authentication_examples/php/: composer.json  jwt.php
authentication_examples/rust/: Cargo.toml
authentication_examples/rust/src/: main.rs  types.rs
plugin_based_callback/: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  example.env  main.py  requirements.txt
plugin_based_callback/src/: authenticate.py  callback_response.py  exceptions.py  helpers.py  settings.py  validations.py
plugin_based_callback/src/databases/: interface.py  mongo.py  postgres.py
plugin_based_callback/src/logs/: log_config.py
plugin_based_callback/src/plugins/: README.md  extra_signature.py  interface.py  plugin_manager.py  tx_policy_validation.py  txid_validation.py
plugin_based_callback/src/plugins/tx_policy/: api.py
plugin_based_callback/src/plugins/tx_policy/external_data/: pricing.py
plugin_based_callback/src/plugins/tx_policy/policy/: consts.py  engine.py  rule.py  transaction.py
plugin_based_callback/src/plugins/tx_policy/tests/: test_policy_engine.py
