[package]
name = "jwt_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
